feat: add complete project structure and implement rolling slot generation and consultation auth fix